# SimpleMenu

./: .gitignore  CMakeLists.txt  README.es.md  README.md
package/: metadata.json
package/contents/config/: config.qml  main.xml
package/contents/locale/es_MX/LC_MESSAGES/: plasma_applet_com.github.jurgencruz.simplemenu.mo
package/contents/ui/: ContextMenuHandler.qml  FavoritesItemDelegate.qml  Footer.qml  HoverableListView.qml  SimpleMenu.qml  configGeneral.qml  main.qml
package/contents/ui/code/: tools.js
package/translate/: build  es_MX.po  template.pot
plugin/: CMakeLists.txt  categorylistmodel.cpp  categorylistmodel.h  delegateinfo.cpp  delegateinfo.h  flattener.cpp  flattener.h  proxylistmodel.cpp  proxylistmodel.h  qmldir  simplemenuplugin.cpp  simplemenuplugin.h
